# WeeklyOrgAgendaGenerator

./: Cargo.toml  README.md  sample.json
src/: main.rs
