[package]
name = "weekly_org_agenda_generator"
version = "0.1.0"
authors = ["Rodrigo Medina <rodrigo.medina.neri@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
regex = "1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
